docs: fix contrast issues in docs
And discard invalid documents

--- a/docs/less/pages/resources/icons.less
+++ b/docs/less/pages/resources/icons.less
@@ -51,7 +51,7 @@
       font-size: 36px;
     }
     &:hover {
-      background-color: var(--rs-primary-500);
+      background-color: var(--rs-primary-900);
       color: #fff;
       border-radius: 4px;
       opacity: 1;
